# nonebot-adapter-onebot-pretender

./: .gitignore  README.md  bot_example.py  pyproject.toml
src/nonebot_adapter_onebot_pretender/: __init__.py  patch_handle_event.py  store.py
src/nonebot_adapter_onebot_pretender/data/: __init__.py  ob11_msg.py
src/nonebot_adapter_onebot_pretender/v11/: __init__.py  adapter.py  factory.py  pretender.py
src/nonebot_adapter_onebot_pretender/v11/impl/: __init__.py  red_pretender.py
src/nonebot_adapter_onebot_pretender/v11/impl/red/: __init__.py  pretender.py
src/nonebot_adapter_onebot_pretender/webapi/: __init__.py  red.py
